# sdkwork-chat-pc-react

./: .env  .env.README.md  .env.dev  .env.development  .env.example  .env.production  .env.test  .eslintrc.cjs  .gitignore  AGENTS.md  ARCHITECT.md  QWEN.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 00-technology-stack-versions.md  architect-standard-react+tauri.md  module-polish-checklist.md  package-architecture-standard.md  package-routing-system.md  prompt.md  service-interface-standard-v2.md  standardized-architecture.md
docs/plans/: 2026-03-15-auth-routing-hardening.md  2026-03-15-module-readiness-governance.md  2026-03-17-i18n-hardening.md  2026-03-17-i18n-migration-design.md  2026-03-17-i18n-migration.md  2026-03-17-settings-i18n-migration-design.md  2026-03-17-settings-i18n-migration-plan.md  (+6 more)
prompt/: execute.md
public/: sw.js
scripts/: audit-service-standards.mjs  ci-flow-contract.test.mjs  module-readiness-lib.mjs  package-release-assets.test.mjs  prepare-shared-sdk-git-sources.mjs  prepare-shared-sdk-packages.mjs  release-flow-contract.test.mjs  report-module-readiness.mjs  report-service-conformance.mjs  run-tauri-cli.mjs  run-tauri-host.mjs  scaffold-package.mjs  shared-sdk-contract.test.mjs  sync-workspace-deps.mjs  verify-packages.mjs
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  pty.rs
src-tauri/src/desktop/: mod.rs  plugins.rs  state.rs  tray.rs  window.rs
tests/: setup.ts
upgrade/: upgrade-auth-v1.2.0-20260303-1905-openapi.yaml  upgrade-auth-v1.2.0-20260303-1905.md  upgrade-multi-module-v1.1.1-20260303-1310-openapi.yaml  upgrade-multi-module-v1.1.1-20260303-1310.md  upgrade-多模块服务-v1.1.0-20260303-1730-openapi.yaml  upgrade-多模块服务-v1.1.0-20260303-1730.md
wasm/markdown-parser/: Cargo.toml
wasm/markdown-parser/src/: lib.rs
(+123 files in other folders)
