[package]
name = "openchat-react-pc"
version = "0.0.1"
description = "OpenChat Desktop Application"
authors = ["OpenChat Team"]
license = "MIT"
repository = "https://github.com/openchat-team/openchat-react-pc"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "window-show", "window-minimize", "window-close", "fs-read-dir", "fs-exists", "os-all", "window-unminimize", "window-hide", "notification-all", "clipboard-all", "process-exit", "window-start-dragging", "process-relaunch", "window-maximize", "dialog-open", "fs-remove-dir", "fs-read-file", "fs-rename-file", "window-unmaximize", "path-all", "fs-create-dir", "fs-write-file", "fs-remove-file", "fs-copy-file", "dialog-save", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
